<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <Button
        android:id="@+id/button_next_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_blue"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_email_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/outline_edittext_blue"
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_hor_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_password_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/outline_edittext_blue"
        android:ems="10"
        android:hint="@string/pin"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_hor_50" />

    <ImageView
        android:id="@+id/imageView_goat_diary_logo_LoginActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_goat_diary"
        app:layout_constraintBottom_toTopOf="@+id/textView_app_name_LoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_app_name_LoginActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_LoginActivity"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="2dp"
        android:layerType="software"
        android:src="@drawable/dashed_line"
        app:layout_constraintEnd_toEndOf="@+id/button_signup_LoginActivity"
        app:layout_constraintStart_toStartOf="@+id/button_signup_LoginActivity"
        app:layout_constraintTop_toBottomOf="@id/button_signup_LoginActivity" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="2dp"
        android:layerType="software"
        android:src="@drawable/dashed_line"
        app:layout_constraintEnd_toEndOf="@+id/button_forgot_pass_LoginActivity"
        app:layout_constraintStart_toStartOf="@+id/button_forgot_pass_LoginActivity"
        app:layout_constraintTop_toBottomOf="@id/button_forgot_pass_LoginActivity" />

    <TextView
        android:id="@+id/textView_hint_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_hint"
        android:textAlignment="center"
        android:textColor="@color/button_blue"
        app:layout_constraintBottom_toTopOf="@+id/button_signup_LoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_LoginActivity" />

    <TextView
        android:id="@+id/textView_app_name_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_email_LoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_goat_diary_logo_LoginActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_goat_diary_logo_LoginActivity"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_forgot_pass_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/button_green"
        android:minHeight="5dp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_signup_LoginActivity"
        app:layout_constraintTop_toBottomOf="@+id/textView_hint_LoginActivity" />

    <Button
        android:id="@+id/button_signup_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/button_yellow"
        android:minHeight="0dp"
        android:padding="8dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/button_forgot_pass_LoginActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hint_LoginActivity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/home" />
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>