<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PasswordResetActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_PasswordResetActivity"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_PasswordResetActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar_PasswordResetActivity"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/button_submit_PasswordResetActivity"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:inputType="number"
                android:id="@+id/editText_pass_PasswordResetActivity"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_edittext_blue"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginStart="20dp"
                android:inputType="number"
                android:layout_marginEnd="20dp"
                android:id="@+id/editText_c_pass_PasswordResetActivity"
                android:layout_marginTop="8dp"
                android:background="@drawable/outline_edittext_blue"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView_show_hint_PasswordResetActivity"
                android:layout_width="match_parent"
                android:textColor="@color/button_blue"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/show_hint"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_submit_PasswordResetActivity"
        android:textColor="@android:color/white"
        android:background="@color/button_blue"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>